# Low_fidelity_RL_project

./: CMakeLists.txt  README.md  main.py  package.xml  test_curr.py
gym_novel_gridworlds/envs/: novel_gridworld_v0_env.py
logs_1/: randomseed_1_avg_reward.npz  randomseed_1_final_avg_reward.npz  randomseed_1_final_reward.npz  randomseed_1_final_timesteps.npz  randomseed_1_task_completion_curr.npz  randomseed_1_task_completion_final.npz  randomseed_1_total_episodes.npz  randomseed_1_total_reward.npz  randomseed_1_total_timesteps.npz
results/: NovelGridworld-v0_c0_b0_e0.npz  NovelGridworld-v0_c0_b0_e1.npz  NovelGridworld-v0_c0_b0_e2.npz  NovelGridworld-v0_c0_b0_e3.npz  NovelGridworld-v0_c1_b0_e0.npz
