<?xml version="1.0"?>
<package format="2">
  <name>low_fidelity_rl</name>
  <version>0.0.0</version>
  <description>The low_fidelity_rl package</description>

  <maintainer email="shukla-yash@todo.todo">shukla-yash</maintainer>
  <author email="shukla-yash@todo.todo">shukla-yash</author>
  <author email="cst@todo.todo">cst</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>discretized_movement</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>discretized_movement</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>discretized_movement</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
